--- a/test-and-learn/pubspec.yaml
+++ b/test-and-learn/pubspec.yaml
@@ -40,6 +40,15 @@ dependencies:
   date_field: ^6.0.0
   radio_group_v2: ^3.3.1
   google_fonts: ^6.3.2
+  dio: ^5.9.0
+  image_picker: ^1.2.0
+  image_picker_web: ^4.0.0
+  jwt_decode: ^0.3.1
+  shared_preferences: ^2.5.3
+  path_provider: ^2.1.5
+  path: ^1.9.1
+  http_parser: ^4.0.0
+  mime: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +71,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/logo.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
