--- a/test-and-learn/pubspec.yaml
+++ b/test-and-learn/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   path: ^1.9.1
   http_parser: ^4.0.0
   mime: ^1.0.0
-
+  collection: ^1.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
